# AdvancedAI

./: README.md  pyproject.toml
documents/: Entregable 1 - Grupo 5.docx  Entregable 2 - Grupo 5.docx  Entregable 3 - Grupo 5.docx
notebooks/: Entregable_2_Grupo_5.ipynb  Entregable_3_Grupo_5.ipynb  ITALO - Entregable_3_Grupo_5.ipynb
src/: main.py
