[project]
name = "advancedai"
version = "0.1.0"
description = "Advanced AI - Traffic Flow Prediction with GNNs and Transformers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "networkx>=3.0",
    "matplotlib>=3.8.0",
    "torch>=2.12.0",
    "torch-geometric>=2.5.0",
    "torchinfo>=1.8.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.0",
]
